# github-agent-proxy

./: .env.client.example  .env.example  .gitignore  AGENTS.md  HANDOFF_LLM.md  PROJECT_CONTEXT.md  README.md  pyproject.toml
.pi/skills/adr-generator/: adr_generator.py
.pi/skills/agents-md-generator/: SKILL.md  generate_agents_md.py
.pi/skills/artifacts-consistency-checker/: SKILL.md  check_consistency.py
.pi/skills/changelog-updater/: update_changelog.py
.pi/skills/classify-change-risk/: README.md  SKILL.md  classify_risk.py
.pi/skills/django-insights/: django_insights.py
.pi/skills/project-context-maintainer/: maintain_project_context.py
.pi/skills/quality-gate-executor/: quality_gate.py
.pi/skills/refactor-sprint-suggester/: suggest_refactor_sprint.py
.pi/skills/release-evidence-pack-generator/: generate_release_pack.py
.pi/skills/setup-solopreneur-project/: SKILL.md  (+1 more)
app/: __init__.py  audit.py  auth.py  github_client.py  main.py  policy.py  services.py
config/: policy.yaml  policy.yaml.example
docs/: agent-integration.md  api.md  github-app-setup.md  policy.md
docs/adr/: README.md
skills/github-proxy/: SKILL.md
tests/integration/: test_full_workflow.py
tests/security/: test_protected_branch_security.py
tests/unit/: test_app_state_commit_author.py  test_audit.py  test_auth.py  test_branch_service_audit.py  test_commit_files.py  test_commit_service_audit.py  test_create_branch.py  test_create_branch_token.py  test_create_pr.py  test_github_client.py  test_github_commit_flow.py  test_policy.py  test_pr_service_audit.py
(+38 files in other folders)
